data/collection/fixes/descriptions/kotlin/KT-17188
```
class Foo private constructor()

fun main(args: Array<String>) {
    Foo
}
```

```
1.kt:4:5: error: please specify constructor invocation; classifier 'Foo' does not have a companion object
    Foo
    ^
```

The error should not suggest to "specify constructor invocation" here because there's no way to construct a `Foo` instance at this point.